$Id: History,v 1.18 2001-02-05 17:53:50 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

05 feb 01: G.Cosmo (stand-V03-00-02)
- Migration to STL for G4DataVector and G4OrderedTable.
  Modified files: G4SynchrotronRadiation.hh, G4IeBremsstrahlung.cc,
                  G4eBremsstrahlung.cc.

23 jan 01: mma (stand-V03-00-01)
- corrections in e/hEnergyLoss.cc: AlongStepDoIt L.Urban 23-01-01
  PostStep information is not used any more in AlongStepDoIt
  when generating sub-cutoff delta rays. (bug found by Babar)
     
16 jan 01: mma (stand-V03-00-00)
- small corrections in e/hEnergyLoss.cc L.Urban 11-01-01
  to ensure consistency between cut in range and step limitation
  due to energy loss (finalRange data member <-> cut in range)
- change in energy loss computation in eBrems.hh and .cc L.Urban 11-01-01
  parametrization of energy loss due to soft brems has been corrected,
  it was too big for big cut values.

17 Nov 00 mma : stand-V02-00-04
     
12 Nov 00 Corrections by Rui Curado da Silva (Polarized Compton)
- Sampling of Phi
- Depolarization probability 
     
08 Nov 00 mma (stand-V02-00-03)
-  eBrem
   07/08/00  new cross section/en.loss parametrisation, LPM flag , L.Urban