@@ -5,24 +5,15 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4eplusAnnihilation.icc,v 1.2 1999-12-15 14:51:49 gunter Exp $
+// $Id: G4eplusAnnihilation.icc,v 1.3 2001-02-22 18:26:08 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
-// 
-// ---------------------------------------------------------------
-//      GEANT 4 class inlined methods file
-//
-//      For information related to this code contact:
-//      CERN, CN Division, ASD group
-//      History: first implementation, based on object model of
-//      2nd December 1995, G.Cosmo
-//      ------------ G4eplusAnnihilation process ---------
-//                   by Michel Maire, 7 July 1996
-// ***************************************************************
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
+
 // 10-01-97, crossection table + meanfreepath table, M.Maire
 // 17-03-97, merge 'in fly' and 'at rest', M.Maire
-// ---------------------------------------------------------------
-
+// 
+//....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
 
 inline G4bool G4eplusAnnihilation::IsApplicable(const G4ParticleDefinition& particle)
